--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/receptio?useSSL=false&serverTimezone=UTC
-spring.datasource.username=receptio
-spring.datasource.password=receptio
+spring.data.neo4j.uri=${GRAPHENEDB_BOLT_URL}
+spring.data.neo4j.username=${GRAPHENEDB_BOLT_USER}
+spring.data.neo4j.password=${GRAPHENEDB_BOLT_PASSWORD}
 
-spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-spring.jackson.serialization.fail-on-empty-beans=false
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.data.neo4j.open-in-view=false
