--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.data.neo4j.uri=${GRAPHENEDB_BOLT_URL}
-spring.data.neo4j.username=${GRAPHENEDB_BOLT_USER}
-spring.data.neo4j.password=${GRAPHENEDB_BOLT_PASSWORD}
+org.neo4j.driver.uri=${GRAPHENEDB_BOLT_URL}
+org.neo4j.driver.authentication.username=${GRAPHENEDB_BOLT_USER}
+org.neo4j.driver.authentication.password=${GRAPHENEDB_BOLT_PASSWORD}
 
 spring.data.neo4j.open-in-view=false
