Neo4j compatibility fixes. (#3)
* Use neo4j versions with java8 support

* More dependencies

* Dependency fix

* Set configuration in yaml-config

* Moved config yaml

* Update to newest bolt driver

* Delete unimplemented test

* Last minute fixes

Fixed so endpoints are available on /recipe instead of /recipe/. Search by ingredient now works.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 org.neo4j.driver.uri=${GRAPHENEDB_BOLT_URL}
 org.neo4j.driver.authentication.username=${GRAPHENEDB_BOLT_USER}
 org.neo4j.driver.authentication.password=${GRAPHENEDB_BOLT_PASSWORD}
-
-spring.data.neo4j.open-in-view=false
+org.neo4j.driver.config.encrypted=true
