--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ org.neo4j.driver.uri=${GRAPHENEDB_BOLT_URL}
 org.neo4j.driver.authentication.username=${GRAPHENEDB_BOLT_USER}
 org.neo4j.driver.authentication.password=${GRAPHENEDB_BOLT_PASSWORD}
 org.neo4j.driver.config.encrypted=true
+
+auth0.audience=${AUTH0_AUDIENCE}
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${AUTH0_DOMAIN}
